[ new song :fun ] pippi langstrumpf

--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -109,6 +109,7 @@
             \input{../src/hesapirate}                       \sclearpage
             \input{../src/kaperfahrt}                       \sclearpage
             %\input{../src/kickapoo}                         \sclearpage
+            \input{../src/pippilangstrumpf}                 \sclearpage
             %\input{../src/stillenacht-larp}                 \sclearpage
             \input{../src/trigardon}                        %\sclearpage
             \input{../src/theenchanter}                     \sclearpage
