[ pippi langstrumpf ] artist added

--- a/src/pippilangstrumpf.tex
+++ b/src/pippilangstrumpf.tex
@@ -1,19 +1,15 @@
 \stepcounter{subsection}
 
 \beginsong{Pippi Langstrumpf}[%
-    by={},
-    cr={Zur Verf"{u}gung gestellt von \textsc{Carsten vom Friedrichshain}},
+    by={Astrid Lindgren, Rabenschrey \textit{Medley}},
+    cr={Zur Verf\"{u}gung gestellt von \textsc{Carsten vom Friedrichshain}},
     li={, adaptiert von \textsc{JoSh}},
     index={pippilangstrumpf}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Pippi Langstrumpf} --- }
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Pippi Langstrumpf} --- Astrid Lindgren, Rabenschrey \textit{Medley}}
 
     \label{pippilangstrumpf}
-
-    \newchords{verse}
-    \newchords{chorus}
-    \newchords{bridge}
 
     \begin{center}
         \gtab{C}{x32010:032010}
