--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -22,6 +22,10 @@
 
 \begin{document}
 
+\newchords{verse}
+\newchords{chorus}
+\newchords{bridge}
+
 \date{\textbf{Erstellt am:} 10. Februar 2014 \\ \textbf{\"{U}berarbeitet am:} \today}
 \clearpage
 
@@ -72,12 +76,14 @@
             \input{../src/dasbierichinderrechtentrug}       \sclearpage
             \input{../src/derwandersmann}                   \sclearpage
             %\input{../src/dunklestunde}                     \sclearpage
+            \input{../src/faroverthemistymountainscold}     \sclearpage
             \input{../src/geisterschiff}                    \sclearpage
             %\input{../src/grausinddieschwingen}             \sclearpage
             \input{../src/i_see_fire}                       \sclearpage
+            \input{../src/ichundeinfassvollerwein}          \sclearpage
             \input{../src/icourtedaweegirl}                 \sclearpage
             %\input{../src/ihrsonah}                         \sclearpage
-            %\input{../src/kleidausrosen}                    \sclearpage
+            \input{../src/kleidausrosen}                    \sclearpage
             %\input{../src/lordoftherings}                   \sclearpage
             %\input{../src/makingupthemiles}                 \sclearpage
             \input{../src/mordaufdemabort}                  \sclearpage
@@ -101,10 +107,13 @@
     \clearpage
     \songsection{Fun}
         \begin{songs}{}
+            \input{../src/blauwiedasmeer}                   \sclearpage
             %\input{../src/dienackteelfe}                    \sclearpage
             %\input{../src/dragonball}                       \sclearpage
             %\input{../src/buenastardesamigo}                \sclearpage
             \input{../src/deathtothedrow}                   \sclearpage
+            \input{../src/eineleicheimteich}                \sclearpage
+            \input{../src/ethikderfuesse}                   \sclearpage
             \input{../src/fassbierpaladosen}                \sclearpage
             \input{../src/hesapirate}                       \sclearpage
             \input{../src/kaperfahrt}                       \sclearpage
@@ -116,17 +125,18 @@
             %\input{../src/untotaufurlaub}
         \end{songs}{}
 
-    %\clearpage
-    %\songsection{Modern / Rock / Blues}{}
-    %    \begin{songs}{}
-    %        %\input{../src/everythingburns}                  \sclearpage
-    %        %\input{../src/littletalks}                      \sclearpage
-    %        %\input{../src/mountainclimbing}                 \sclearpage
-    %        %\input{../src/rollinginthedeep}                 \sclearpage
-    %        %\input{../src/sevennationarmy}                  \sclearpage
-    %        %\input{../src/soundofsilence.tex}               \sclearpage
-    %        %\input{../src/timshel}
-    %    \end{songs}
+    \clearpage
+    \songsection{Modern / Rock / Blues}{}
+        \begin{songs}{}
+            %\input{../src/everythingburns}                  \sclearpage
+            %\input{../src/littletalks}                      \sclearpage
+            %\input{../src/mountainclimbing}                 \sclearpage
+            %\input{../src/rollinginthedeep}                 \sclearpage
+            %\input{../src/sevennationarmy}                  \sclearpage
+            %\input{../src/soundofsilence}                   \sclearpage
+            \input{../src/summerwine}                       \sclearpage
+            %\input{../src/timshel}
+        \end{songs}
 
     \clearpage
     \songsection{Oldies}
