[ mountain climbing ] commented in

--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -130,7 +130,7 @@
         \begin{songs}{}
             %\input{../src/everythingburns}                  \sclearpage
             %\input{../src/littletalks}                      \sclearpage
-            %\input{../src/mountainclimbing}                 \sclearpage
+            \input{../src/mountainclimbing}                 \sclearpage
             %\input{../src/rollinginthedeep}                 \sclearpage
             %\input{../src/sevennationarmy}                  \sclearpage
             %\input{../src/soundofsilence}                   \sclearpage
