--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -40,6 +40,9 @@
             Ich erhebe keinen Anspruch auf Eigentum oder Richtigkeit der Dargestellten Texte oder Akkorde, z.T. habe ich sie von anderen Menschen \"{u}bernommen und mit der Zeit selbst abgewandelt, z.T. habe ich sie mir selber durch H\"{o}ren oder Video-Material abkupfern k\"{o}nnen. \par\medskip
 
             Sollte es Einw\"{a}nde gegen ein oder mehrere Lieder oder Texte geben, bin ich \"{u}ber meine E-Mail Adresse \texttt{hringriin@gmail.com} erreichbar.
+
+            Dank \textsc{Fagus vom Friedriechshain} konnte ich mein Repertoire um einige St\"{u}cke erweitern.
+            Seine Beitr\"{a}ge sind gekennzeichnet oder werden noch gekennzeichnet werden.
         }
     }
 \end{center}
