--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -41,7 +41,7 @@
 
             Sollte es Einw\"{a}nde gegen ein oder mehrere Lieder oder Texte geben, bin ich \"{u}ber meine E-Mail Adresse \texttt{hringriin@gmail.com} erreichbar. \par\medskip
 
-            Dank \textsc{Fagus vom Friedriechshain} konnte ich mein Repertoire um einige St\"{u}cke erweitern.
+            Dank \textsc{Fagus vom Friedriechshain} konnte ich mein Chordbook um einige St\"{u}cke erweitern.
             Seine Beitr\"{a}ge sind gekennzeichnet oder werden noch gekennzeichnet werden.
         }
     }
