[ das bier ich in der rechten trug ] fixes

--- a/src/dasbierichinderrechtentrug.tex
+++ b/src/dasbierichinderrechtentrug.tex
@@ -18,15 +18,15 @@
     \end{center}
 
     \beginverse
-        Ich \[D]schlenderte ge\[A]mach, versonnen \[G] aus der Schenkent\"{u}r
-        Mit \[D]Armen voller \[A]Freudenwonnen \[G]lag die Nacht vor mir
-        In \[D]meinem Mund ein \[A]Pfeifchen hing, im \[G]linken Arm ein M\"{a}gdlein ging
-        In \[D]rechter Hand ein \[A]Krug voll Bier, so \[G]wandel\[A]ten hin\[D]aus wir vier.
+        Ich schl\[D]enderte gem\[A]ach, versonnen \[G]aus der Schenkent\"{u}r
+        Mit \[D]Armen voller Fr\[A]eudenwonnen l\[G]ag die Nacht vor mir
+        In m\[D]einem Mund ein Pf\[A]eifchen hing, im l\[G]inken Arm ein M\"{a}gdlein ging
+        In r\[D]echter Hand ein K\[A]rug voll Bier, so w\[G]andelt\[A]en hin\[D]aus wir vier.
 
-        Doch \[D]als ich auf die \[A]Stra\ss{}e trat, voll \[G]Frohgemut und -sinn
-        Schritt \[D] in schlammig \[A]Stadtunrat und \[G]schlitterte dahin.
-        Der \[D]Untergrund ge\[A]schwind entglitt, im \[G]Schwung nahm ich das M\"{a}gdlein mit,
-        Die \[D]mir im Schreck und \[A]ihrem Flug das \[G]Pfeifchen \[A]aus dem \[D]Munde schlug.
+        Doch \[D]als ich auf die St\[A]ra\ss{}e trat, voll Fr\[G]ohgemut und -sinn
+        Schritt \[D]ich in schlammig St\[A]adtunrat und schl\[G]itterte dahin.
+        Der \[D]Untergrund geschw\[A]ind entglitt, im Schw\[G]ung nahm ich das M\"{a}gdlein mit,
+        Die m\[D]ir im Schreck und \[A]ihrem Flug das Pf\[G]eifchen \[A]aus dem M\[D]unde schlug.
     \endverse
 
     \beginchorus
