--- a/src/dasbierichinderrechtentrug.tex
+++ b/src/dasbierichinderrechtentrug.tex
@@ -17,71 +17,71 @@
         \gtab{Bm}{X24432:013421}
     \end{center}
 
-    \beginverse
+    \beginverse\memorize[verse]
         Ich schl\[D]enderte gem\[A]ach, versonnen \[G]aus der Schenkent\"{u}r
         Mit \[D]Armen voller Fr\[A]eudenwonnen l\[G]ag die Nacht vor mir
         In m\[D]einem Mund ein Pf\[A]eifchen hing, im l\[G]inken Arm ein M\"{a}gdlein ging
-        In r\[D]echter Hand ein K\[A]rug voll Bier, so w\[G]andelt\[A]en hin\[D]aus wir vier.
+        In r\[D]echter Hand ein Kr\[A]ug voll Bier, so w\[G]andelt\[A]en hin\[D]aus wir vier.
 
-        Doch \[D]als ich auf die St\[A]ra\ss{}e trat, voll Fr\[G]ohgemut und -sinn
+        Doch \[D]als ich auf die Str\[A]a\ss{}e trat, voll Fr\[G]ohgemut und -sinn,
         Schritt \[D]ich in schlammig St\[A]adtunrat und schl\[G]itterte dahin.
         Der \[D]Untergrund geschw\[A]ind entglitt, im Schw\[G]ung nahm ich das M\"{a}gdlein mit,
         Die m\[D]ir im Schreck und \[A]ihrem Flug das Pf\[G]eifchen \[A]aus dem M\[D]unde schlug.
     \endverse
 
-    \beginchorus
-        Die \[G]Welt, sie heilt den \[A]Atem an, die \[D]Zeit stand \[A] stockend \[Bm]still
-        Und \[G]ich ersann, was \[Bm]ich noch retten \[A]kann und \[G]retten \[D]will.
+    \beginchorus\memorize[chorus]
+        Die W\[G]elt, sie hielt den \[A]Atem an, die Z\[D]eit stand \[A] stockend st\[Bm]ill
+        Und \[G]ich ersann, was \[Bm]ich noch retten k\[A]ann und r\[G]etten w\[D]ill.
     \endchorus
 
-    \beginverse
-        Ich ^st\"{u}tzte mich mit ^linker Hand und ^warf mich hoch empor
-        Und ^zog dabei nicht ^grad galant am ^Haar das M\"{a}gdlein vor.
-        Dann ^trat ich mit dem ^Fu\ss{} die Pfeif, die ^flog in einem Funkenreif
-        Hin^weg der Magd, die ^grad nach vorn, wie ^ich er^neut den ^Halt verlor'n.
+    \beginverse\replay[verse]
+        Ich st^\"{u}tzte mich mit l^inker Hand und w^arf mich hoch empor
+        Und z^og dabei nicht gr^ad galant am H^aar das M\"{a}gdlein vor.
+        Dann tr^at ich mit dem F^u\ss{} die Pfeif, die fl^og in einem Funkenreif
+        Hinw^eg der Magd, die gr^ad nach vorn, wie ^ich ern^eut den H^alt verlor'n.
 
-        Ich ^warf mich also ^auf den R\"{u}cken ^und mit linker Hand und Knie
-        Tat ^ich sie wuchtig ^von mir dr\"{u}cken, ^dass sie rittlings fiel und schrie.
-        Grad ^noch erreichte ^denn mein Schuh das ^Pfeifchen und ich trat schnell zu,
-        So ^sauste sie er^neut hinweg, dem ^Weib sich ^n\"{a}hernd ^Stra\ss{}endreck.
+        Ich w^arf mich also ^auf den R\"{u}cken ^und mit linker Hand und Knie
+        Tat ^ich sie wuchtig v^on mir dr\"{u}cken, d^ass sie rittlings fiel und schrie.
+        Grad n^och erreichte d^enn mein Schuh das Pf^eifchen und ich trat schnell zu,
+        So s^auste sie ern^eut hinweg, dem W^eib sich n^\"{a}hernd Str^a\ss{}endreck.
     \endverse
 
-    \beginchorus
-        Die \[G]Welt, sie heilt den \[A]Atem an, die \[D]Zeit stand \[A] stockend \[Bm]still
-        Und \[G]ich ersann, was \[Bm]ich noch retten \[A]kann und \[G]retten \[D]will.
+    \beginchorus\replay[chorus]
+        Die W^elt, sie heilt den ^Atem an, die Z^eit stand ^ stockend st^ill
+        Und ^ich ersann, was ^ich noch retten k^ann und r^etten w^will.
     \endchorus
 
-    \beginverse
-        Ich ^schwang mein' Ober^leib hinauf und ^hielt und riss die Magd am Kleid,
-        Das ^hat sie zwar nicht ^von dem Sturz, doch ^von dem schn\"{o}den Kleid befreit.
-        Dann ^wollt' ich, dass mein ^Munde fing das ^Pfeifchen, das zu Boden ging.
-        So ^beugte ich mein ^Kreuze krumm und ^fing es zwar ^ doch ^falsch herum.
+    \beginverse\replay[verse]
+        Ich schw^ang mein' Oberl^eib hinauf und h^ielt und riss die Magd am Kleid,
+        Das h^at sie zwar nicht v^on dem Sturz, doch v^on dem schn\"{o}den Kleid befreit.
+        Dann w^ollt' ich, dass mein M^unde fing das Pf^eifchen, das zu Boden ging.
+        So b^eugte ich mein Kr^euze krumm und f^ing es zwar ^ doch f^alsch herum.
 
-        Voll ^Schmerz gepeint spie ^ich die Glut im ^allzuweiten Bogen aus
-        Und ^streckte mich voll ^\"{U}bermut mit ^letzter Kraft in Saus und Braus
-        In ^Richtung Magd, die ^leuchtend gar, mit ^meiner Funkenglut im Haar
-        Trotz ^all der M\"{u}h', die ^ich mir gab, fiel ^klatschen ^in den ^Stadtunrat
+        Voll Schm^erz gepeint spie ^ich die Glut im ^allzuweiten Bogen aus
+        Und str^eckte mich voll ^\"{U}bermut mit l^etzter Kraft in Saus und Braus
+        In R^ichtung Magd, die l^euchtend gar, mit m^einer Funkenglut im Haar
+        Trotz ^all der M\"{u}h', die ^ich mir gab, fiel kl^atschend ^ in den St^adtunrat
     \endverse
 
-    \beginchorus
-        Die \[G]Welt, sie heilt den \[A]Atem an, die \[D]Zeit stand \[A] stockend \[Bm]still
-        Und \[G]ich ersann, was \[Bm]ich noch retten \[A]kann und \[G]retten \[D]will.
+    \beginchorus\replay[chorus]
+        Die W^elt, sie heilt den ^Atem an, die Z^eit stand ^ stockend st^ill
+        Und ^ich ersann, was ^ich noch retten k^ann und r^etten w^will.
     \endchorus
 
-    \beginverse
-        So ^stand ich denn be^treten da, von ^Schlamm und Matsch benetzt.
-        Be^sudelt, stinkend, ^muffig gar, vom ^Stra\ss{}endreck durchsetzt.
-        Vor ^einer Magd, die ^halbnackt war, mich ^schmorend und verletzt besah
-        Und ^trotzig sich denn ^abgewandt, ist ^schluchzend ^sie nach ^Haus gerannt.
+    \beginverse\replay[verse]
+        So st^and ich denn betr^eten da, von Schl^amm und Matsch benetzt.
+        Bes^udelt, stinkend, m^uffig gar, vom Str^a\ss{}endreck durchsetzt.
+        Vor ^einer Magd, die h^albnackt war, mich schm^orend und verletzt besah
+        Und tr^otzig sich denn ^abgewandt, ist schl^uchzend s^ie nach H^aus gerannt.
 
-        ^Auch mein guter ^Tabak war in ^aller Welt verstreut.
-        Mein ^guter, edler ^Tabak den ge^nie\ss{}en wollt' ich heut'.
-        Da^hin war die er^hoffte Nacht, so ^hab ich mich denn heimgemacht
-        Und ^trank frustriert in ^einem Zug das ^Bier ich ^in der ^Rechten trug.
+        ^Auch mein guter T^abak war in ^aller Welt verstreut.
+        Mein g^uter, edler T^abak den gen^ie\ss{}en wollt' ich heut'.
+        Dah^in war die erh^offte Nacht, so h^ab ich mich denn heimgemacht
+        Und tr^ank frustriert in ^einem Zug das B^ier ich ^in der R^echten trug.
     \endverse
 
-    \beginchorus
-        Die \[G]Welt, sie heilt den \[A]Atem an, die \[D]Zeit stand \[A] stockend \[Bm]still
-        Und \[G]ich ersann, was \[Bm]ich noch retten \[A]kann und \[G]retten \[D]will.
+    \beginchorus\replay[chorus]
+        Die W^elt, sie heilt den ^Atem an, die Z^eit stand ^ stockend st^ill
+        Und ^ich ersann, was ^ich noch retten k^ann und r^etten w^will.
     \endchorus
 \endsong
