--- a/src/geisterschiff.tex
+++ b/src/geisterschiff.tex
@@ -12,10 +12,11 @@
     \begin{center}
         \gtab{Em7}{022030:012040}
         \gtab{Em6}{022020:012030}
-        \gtab{C}{032010:032010}
+        \gtab{C\textsuperscript{1}}{032010:032010}
+        \gtab{C\textsuperscript{2}}{032013:032014}
         \gtab{G}{320033:210034}
         \gtab{D}{XX0232:000132}
-        \gtab{CM7}{X32000:012000}
+        \gtab{CM7}{X3200X:012000}
         \gtab{Em}{022000:023000}
         \gtab{Am}{X02210:002310}
         \gtab{Bm}{X13321:013421}
@@ -28,71 +29,78 @@
 
     \beginverse*
         \textnote{Intro 2}
-        \[C] \[C] \[G] \[D]
+        \[C\textsuperscript{1}] \[C\textsuperscript{2}] \[G] \[D]
     \endverse
 
-    \beginverse\memorize
-        Es \[Em7]war in einer Sturmnacht, als die \[Em6]Wellen hoch wie H\"{a}user,
-        Als die \[C]Glocken schlugen wild Alarm, ein \[G]Schiff zu dicht ans \[D]Ufer kam.
-        Wir \[Em7]hatten falsches Licht entz\"{u}ndet, \[Em6] es zu leiten in die Riffe,
-        \[C] Es zu pl\"{u}ndern ohne Gnade \[G]wenn es dort sein \[D]Ende findet.
-
-        \brk
-
-        \[Em7]Segel rissen, Balken \"{a}chzten, \[Em6]Mast und Schote brachen laut,
-        \[C] M\"{a}nner schrien lang' um Hilfe, \[G] bis sie sich das \[D]Wasser nahm!
+    \beginverse\memorize[verse]
+        Es w\[Em7]ar in einer Sturmnacht, als die W\[Em6]ellen hoch wie H\"{a}user,
+        Als die Gl\[C]ocken schlugen wild Alarm, ein Sch\[G]iff zu dicht ans \[D]Ufer kam.
+        Wir h\[Em7]atten falsches Licht entz\"{u}ndet, \[Em6] es zu leiten in die Riffe,
+        \[C] Es zu pl\"{u}ndern ohne Gnade w\[G]enn es dort sein \[D]Ende findet.
+        S\[Em7]egel rissen, Balken \"{a}chzten, M\[Em6]ast und Schote brachen laut,
+        \[C] M\"{a}nner schrien lang' um Hilfe, \[G] bis sie sich das W\[D]asser nahm!
         \[Em7] Der n\"{a}chste Morgen lag im Nebel, \[Em6] wir am Strand der Beute wegen,
-        \[C] Doch es war sehr sonderbar, kein \[G]Schiff, kein Strandgut, \[D]keine Beute
-
-        \[CM7]Es lag nur die See ruhig da ...
+        \[C] Doch es war sehr sonderbar, kein Sch\[G]iff, kein Strandgut, k\[D]eine Beute
+        \[CM7]Es lag nur die See ruhig da \ldots
     \endverse
 
-    \beginverse*
-        In \[Em]st\"{u}rmischen N\"{a}ch\[G]ten und bei r\[Em]auer See \[C]
+    \beginverse*\memorize[bridge]
+        In st\[Em]\"{u}rmischen N\"{a}cht\[G]en und bei rau\[Em]er Se\[C]e
         Wurde \[Em]es schon oft ges\[G]ichtet \[Em] \[C]
-        Ein sch\[Em]emenhafter Umr\[G]iss, mehr ein \[Em]Schatten denn Gest\[C]alt,
-        \[Em]L\"{a}uft queab zur \[G]K\"{u}ste, zu den \[Em]Riffen und macht \[Am]halt!
+        Ein sch\[Em]emenhafter Umr\[G]iss, mehr ein Sch\[Em]atten denn Gest\[C]alt,
+        L\[Em]\"{a}uft querab zur K\[G]\"{u}ste, zu den R\[Em]iffen und macht h\[Am]alt!
     \endverse
 
-    \beginchorus
-        \[Em]Dann, ein \[G]Feuer in der Nach\[D]t, das Schiff in \[Bm]Flammen lichter\[Em]loh!
-        Seht es \[G]ist erneut er\[D]wacht, ein \[Bm]Mahnmal eine \[Em]Warnung \[Am]wohl!
-        \[Em] Es leuchtet \[G]hell, es leuchtet \[D]weit, es ist \[Bm]nicht zu \"{u}ber\[Em]seh'n
-        Und kein \[G]and'rer Kapit\[D]\"{a}n sah seit\[Bm]her sein Boot zu \[E]Grunde \[Am]geh'n!
+    \beginchorus\memorize[chorus]
+        D\[Em]ann, ein F\[G]euer in der Nacht, \[D] das Schiff in Fl\[Bm]ammen lichterl\[Em]oh!
+        Seht, es \[G]ist erneut erw\[D]acht, ein M\[Bm]ahnmal eine W\[Em]arnung w\[Am]ohl!
+        \[Em] Es leuchtet h\[G]ell, es leuchtet w\[D]eit, es ist n\[Bm]icht zu \"{u}bers\[Em]eh'n
+        Und kein \[G]and'rer Kapit\[D]\"{a}n sah seith\[Bm]er sein Boot zu Gr\[Em]unde g\[Am]eh'n!
     \endchorus
 
     \beginverse*
         \textnote{Intro 1}
+        \lrep  \[Em7] \[Em7] \[Em6] \[Em6] \rrep \rep{2}
     \endverse
 
-    \beginverse
-        Man ^h\"{o}rt die alten Fischer sagen, ^ dass der Schoner seit den Tagen,
-        ^ Seit der unheilsvollen Nacht, so ^manchem Braven ^Gl\"{u}ck gebracht.
-        ^Ich steh' drau\ss{}en an den Riffen, ^ eine inn're Macht zieht Nacht f\"{u}r ^Nacht
-        Mich an den Ort der schlimmen S\"{u}hne, ich ^werd' noch lange ^b\"{u}\ss{}en m\"{u}ssen
-
-        Dem ^Geisterschiff bald folgen m\"{u}ssen!
+    \beginverse\replay[verse]
+        Man h^\"{o}rt die alten Fischer sagen, ^ dass der Schoner seit den Tagen,
+        ^ Seit der unheilsvollen Nacht, so m^anchem Braven Gl^\"{u}ck gebracht.
+        ^Ich steh' drau\ss{}en an den Riffen, ^ eine inn're Macht zieht Nacht f\"{u}r N^acht
+        Mich an den Ort der schlimmen S\"{u}hne, ich w^erd' noch lange b^\"{u}\ss{}en m\"{u}ssen
+        Dem \[CM7]Geisterschiff bald folgen m\"{u}ssen!
     \endverse
 
-    \beginverse*
-        In \[Em]st\"{u}rmischen N\"{a}ch\[G]ten und bei r\[Em]auer See \[C]
-        Wurde \[Em]es schon oft ges\[G]ichtet \[Em] \[C]
-        Ein sch\[Em]emenhafter Umr\[G]iss, mehr ein \[Em]Schatten denn Gest\[C]alt,
-        \[Em]L\"{a}uft queab zur \[G]K\"{u}ste, zu den \[Em]Riffen und macht \[Am]halt!
+    \beginverse*\replay[bridge]
+        In st^\"{u}rmischen N\"{a}cht^en und bei rau^er Se^e
+        Wurde ^es schon oft ges^ichtet ^ ^
+        Ein sch^emenhafter Umr^iss, mehr ein Sch^atten denn Gest^alt,
+        L^\"{a}uft querab zur K^\"{u}ste, zu den R^iffen und macht h^alt!
     \endverse
 
-    \beginchorus
-        \lrep \[Em]Dann, ein \[G]Feuer in der Nach\[D]t, das Schiff in \[Bm]Flammen lichter\[Em]loh!
-        Seht es \[G]ist erneut er\[D]wacht, ein \[Bm]Mahnmal eine \[Em]Warnung \[Am]wohl!
-        \[Em] Es leuchtet \[G]hell, es leuchtet \[D]weit, es ist \[Bm]nicht zu \"{u}ber\[Em]seh'n
-        Und kein \[G]and'rer Kapit\[D]\"{a}n sah seit\[Bm]her sein Boot zu \[E]Grunde \[Am]geh'n! \rrep \rep{2}
+    \textnote{Feuer geben!}
+
+    \beginchorus\replay[chorus]
+        D^ann, ein F^euer in der Nacht, ^ das Schiff in Fl^ammen lichterl^oh!
+        Seht, es ^ist erneut erw^acht, ein M^ahnmal eine W^arnung w^ohl!
+        ^ Es leuchtet h^ell, es leuchtet w^eit, es ist n^icht zu \"{u}bers^eh'n
+        Und kein ^and'rer Kapit^\"{a}n sah seith^er sein Boot zu Gr^unde g^eh'n!
+    \endchorus
+
+    \beginchorus\replay[chorus]
+        D^ann, ein F^euer in der Nacht, ^ \ldots ^ \ldots
+        ^ Seht, es ^ist erneut erw^acht, \ldots ^ \ldots ^ \ldots ^ \ldots
+        Ooh^Ooh es leuchtet h^ell, es leuchtet w^eit, es ist n^icht zu \"{u}bers^eh'n
+        Und kein ^and'rer Kapit^\"{a}n sah seith^er sein Boot zu Gr^unde g^eh'n!
     \endchorus
 
     \beginverse*
         \textnote{Intro 1}
+        \lrep  \[Em7] \[Em7] \[Em6] \[Em6] \rrep \rep{2}
     \endverse
 
     \beginverse*
-        \textnote{Intro 2}
+        \textnote{Intro 2, Ritardando, enden mit Flagolet im zw\"{o}lften Bund auf Saiten 1-3,6 \textit{E-Moll}}
+        \[C\textsuperscript{1}] \[C\textsuperscript{2}] \[G] \[D] \[Em]
     \endverse
 \endsong
