[ pippi langstrumpf ] forgot one verse

--- a/src/pippilangstrumpf.tex
+++ b/src/pippilangstrumpf.tex
@@ -88,6 +88,16 @@
     \endchorus
 
     \beginverse\replay[verse]
+        Und k^ommt ein Weib dah^er wide-wide-w^itt oder auch zw^eie,
+        N^ehmen wir sie m^it, auch wenn ^eine davon tr^itt.
+    \endverse
+
+    \beginchorus\replay[chorus]
+        \lrep ^Hey wir sind H^eiden trallal^i tallala tralla hoppsassa.
+        ^Hey wir sind H^eiden, wir t^un was uns gef^\"{a}llt. \rrep \rep{2}
+    \endchorus
+
+    \beginverse\replay[verse]
         Der D^eutschritter ist gr^o\ss{}, mein Pf^eil der wird ihn tr^effen.
         Trifft ^ihn nicht mein Pf^eil, ja dann sp^\"{u}rt er halt mein B^eil.
     \endverse
