--- a/src/derwandersmann.tex
+++ b/src/derwandersmann.tex
@@ -18,90 +18,90 @@
         \gtab{Am/D}{5:XX0111:000111}
     \end{center}
 
-    \beginchorus
+    \beginchorus\memorize[chorus]
         Es \[C]ist geleert das \[G]erste Fass,
-        kommt \[Dm]Br\"{u}derlein erz\[Am]\"{a}hlt noch was
-        von \[Dm]euren weiten \[C]Reisen.
-        \[G]Sprecht und hebt das \[C]Glas!
+        kommt Br\[Dm]\"{u}derlein erz\[Am]\"{a}hlt noch was
+        von \[Dm]euren weiten R\[C]eisen.
+        Spr\[G]echt und hebt das Gl\[C]as!
     \endchorus
 
-    \beginverse\memorize
-        Der \[C]alte b\"{a}rtge \[G]Wandersmann
-        \[Dm]f\"{a}ngt mit der Gesch\[Am]ichte an,
-        als \[Dm]einst von fern das \[C]Jagdhorn schallt
-        und \[G]J\"{a}ger hetzten \[C]durch den Wald.
+    \beginverse\memorize[verse]
+        Der \[C]alte b\"{a}rtge W\[G]andersmann
+        f\[Dm]\"{a}ngt mit der Gesch\[Am]ichte an,
+        als \[Dm]einst von fern das J\[C]agdhorn schallt
+        und J\[G]\"{a}ger hetzten d\[C]urch den Wald.
 
-        Der \[Dm]Hirsch drohte \[Fm/D]zu entko\[Am/D]mmen,
-        doch \[C]rannte ich schneller \[G]als das Tier,
-        mit blo\ss{}er \[Dm]Faust \[Fm/D]niederger\[Am/D]ungen;
-        das Ge\[C]weih hier \[G]als Be\[Am]weis daf\"{u}r!
+        Der H\[Dm]irsch drohte z\[Fm/D]u entkomm\[Am/D]en,
+        doch r\[C]annte ich schneller \[G]als das Tier,
+        mit blo\ss{}er F\[Dm]aust nied\[Fm/D]erger\[Am/D]ungen;
+        das Gew\[C]eih hier \[G]als Bew\[Am]eis daf\"{u}r!
     \endverse
 
-    \beginverse
-        Der ^alte b\"{a}rtge ^Wandersmann
-        ^f\"{a}ngt mit der Gesch^ichte an,
-        als ^einst ein Sturm das ^Meer zerw\"{u}hlt
-        und ^Mann und Maus vom Sch^iffsdeck sp\"{u}lt.
+    \beginverse\replay[verse]
+        Der ^alte b\"{a}rtge W^andersmann
+        f^\"{a}ngt mit der Gesch^ichte an,
+        als ^einst ein Sturm das M^eer zerw\"{u}hlt
+        und M^ann und Maus vom Sch^iffsdeck sp\"{u}lt.
 
-        Das Sch^iff droh^te zu s^inken,
-        die ^Segel rissen ^wie Papier.
-        Ich holte ^Luft und ^blie\ss{} den ^Sturm fort;
-        das ^Leinen ^als Be^weis daf\"{u}r!
+        Das Sch^iff droht^e zu sink^en,
+        die S^egel rissen w^ie Papier.
+        Ich holte L^uft und bl^ie\ss{} den St^urm fort;
+        das L^einen ^als Bew^eis daf\"{u}r!
     \endverse
 
-    \beginchorus
+    \beginchorus\replay[chorus]
         Es ^ist geleert das ^erste Fass,
-        kommt ^Br\"{u}derlein erz^\"{a}hlt noch was
-        von ^euren weiten ^Reisen.
-        ^Sprecht und hebt das ^Glas!
+        kommt Br^\"{u}derlein erz^\"{a}hlt noch was
+        von ^euren weiten R^eisen.
+        Spr^echt und hebt das Gl^as!
     \endchorus
 
-    \beginverse
-        Der ^alte b\"{a}rtge ^Wandersmann
-        ^f\"{a}ngt mit der Gesch^ichte an,
-        als ^einst der Feind die ^Stadt besetzt,
-        das ^Katapult das ^Tor zerfetzt.
+    \beginverse\replay[verse]
+        Der ^alte b\"{a}rtge W^andersmann
+        f^\"{a}ngt mit der Gesch^ichte an,
+        als ^einst der Feind die St^adt besetzt,
+        das K^atapult das T^or zerfetzt.
 
-        ^Ich schlich ^mich von ^hinten an,
-        mein ^Kampfschrei klang wie ^tausend Mann.
-        Sie rannten ^fort wie ^scheu's Ge^tier;
-        der ^Helm hier ^als Be^weis daf\"{u}r!
+        ^Ich schlich m^ich von h^inten an,
+        mein K^ampfschrei klang wie t^ausend Mann.
+        Sie rannten f^ort wie sch^eu's Get^ier;
+        der H^elm hier ^als Bew^eis daf\"{u}r!
     \endverse
 
-    \beginverse
-        Der ^alte b\"{a}rtge ^Wandersmann
-        ^f\"{a}ngt mit der Gesch^ichte an,
-        als ^einst der j\"{u}ngste ^Tag anbrach
+    \beginverse\replay[verse]
+        Der ^alte b\"{a}rtge W^andersmann
+        f^\"{a}ngt mit der Gesch^ichte an,
+        als ^einst der j\"{u}ngste T^ag anbrach
         und ^alles von dem ^Ende sprach.
 
-        Es ^leckten Fl^ammen ^in die Welt,
-        als ^offen stand die ^H\"{o}llent\"{u}r.
-        Ich schlug sie ^zu und ^mein Schloss ^ h\"{a}lt;
-        der ^Schl\"{u}ssel als Be^weis daf\"{u}r!
+        Es l^eckten Fl^ammen ^in die Welt,
+        als ^offen stand die H^\"{o}llent\"{u}r.
+        Ich schlug sie z^u und m^ein Schloss h^\"{a}lt;
+        der Schl^\"{u}ssel ^als Bew^eis daf\"{u}r!
     \endverse
 
-    \beginchorus
+    \beginchorus\replay[chorus]
         Es ^ist geleert das ^erste Fass,
         kommt ^Br\"{u}derlein erz^\"{a}hlt noch was
         von ^euren weiten ^Reisen.
         ^Sprecht und hebt das ^Glas!
     \endchorus
 
-    \beginverse
-        Ich ^hab' erz\"{a}hlt von ^meiner Jagd,
+    \beginverse\replay[verse]
+        Ich h^ab' erz\"{a}hlt von m^einer Jagd,
         wie ^ich den Sturm bezw^ungen hab',
-        wie ^ich den b\"{o}sen ^Feind vertrieb
-        und der ^Deckel auf der ^H\"{o}lle blieb.
+        wie ^ich den b\"{o}sen F^eind vertrieb
+        und der D^eckel auf der H^\"{o}lle blieb.
         \brk
-        Nun \[F]rollt das zweite \[Em]Fass herein,
-        wir \[F]wollen nunmehr \[C]gl\"{u}cklich \[G]sein
-        \[F] und nun nicht zu \[Em]voll der Ranzen,
-        \[F] fr\"{o}hlich auf den \[G]Tischen tanzen ...!
+        Nun r\[F]ollt das zweite F\[Em]ass herein,
+        wir w\[F]ollen nunmehr gl\[C]\"{u}cklich s\[G]ein
+        \[F] und nun nicht zu v\[Em]oll der Ranzen,
+        \[F] fr\"{o}hlich auf den T\[G]ischen tanzen ...!
     \endverse
 
-    \beginchorus
-        \lrep Es \[C]fliesst der Wein, es \[G]fliesst das Bier!
-        \[F]Hoch die Kr\"{u}ge \[G]trinken wir! \rrep \rep{4}
+    \beginchorus\replay[chorus]
+        \lrep Es fl^iesst der Wein, es fl^iesst das Bier!
+        \[F]Hoch die Kr\"{u}ge tr\[G]inken wir! \rrep \rep{4}
         \textnote{4ter rit.!}
     \endchorus
 \endsong
