[ mord auf dem abort ] chord placement

--- a/src/mordaufdemabort.tex
+++ b/src/mordaufdemabort.tex
@@ -16,128 +16,136 @@
         \gtab{D}{XX0232:000132}
     \end{center}
 
-    \beginverse
-        \[A]Nachdem sich unser Graf denn mit dem \[E]Volke einst zerstritt
-        Das \[A]wahrlich arg und schwer unter den \[E]hohen Steuern litt
-        Und \[A]voller Zorn das n\"{a}chste Mal den \[E]Eintreiber versohlte
-        Der \[A]daraufhin mit S\"{o}ldnerschaft das \[D]Doppel\[E]te sich \[A]holte.
+    \beginverse\memorize[verse]
+        Nachd\[A]em sich unser Graf denn mit dem V\[E]olke einst zerstritt
+        Das w\[A]ahrlich arg und schwer unter den h\[E]ohen Steuern litt
+        Und v\[A]oller Zorn das n\"{a}chste Mal den \[E]Eintreiber versohlte
+        Der d\[A]araufhin mit S\"{o}ldnerschaft das D\[D]oppelt\[E]e sich h\[A]olte.
 
-        Beschl\[A]oss der Graf den Abort auf dem \[E]Bergfried neu zu richten
-        Auf \[A]dass die Leute in dem Dorf den \[E]Balken konnten sichten
-        Und \[A]um ihn' jeden Morgen dann f\"{u}r \[E]die geliebte Gunst zu danken
-        \[A]Zeigte er mit Donnerschlag zum \[D]Morgen\[D]gru\ss{} den \[A]Blanken.
+        Beschl\[A]oss der Graf den Abort auf dem B\[E]ergfried neu zu richten
+        Auf d\[A]ass die Leute in dem Dorf den B\[E]alken konnten sichten
+        Und \[A]um ihn'n jeden Morgen dann f\"{u}r d\[E]ie geliebte Gunst zu danken
+        Z\[A]eigte er mit Donnerschlag zum M\[D]orgengr\[E]u\ss{} den Bl\[A]anken.
     \endverse
 
-    \beginverse*
-        Nach \[D]vieler Jahre in der Schmach und \[E]lang erlebter Plage
-        raunt \[A]pl\"{o}tzlich durch des Volkes Reihen \[D]schmunzelnd eine Frage:
+    \beginverse*\memorize[bridge]
+        Nach v\[D]ieler Jahre in der Schmach und l\[E]ang erlebter Plage
+        raunt pl\[A]\"{o}tzlich durch des Volkes Reihen schm\[D]unzelnd eine Frage:
     \endverse
 
-    \beginchorus
-        \[A]Wer hat den Donnerbalken \[E]anges\"{a}gt?
-        \[D]Wen hat's zu solch gottloser \[E]Tat bewegt?
-        \[A]Wer tr\"{a}gt die Handschrift von dem \[D]feigen Mord?
-        \[A]An unser'm \[E]Gnaden auf dem \[A]Turm-Abort ... \[A] \[E] \[A] \[D] \[E] \[A]
+    \beginchorus\memorize[chorus]
+        W\[A]er hat den Donnerbalken \[E]anges\"{a}gt?
+        W\[D]en hat's zu solch gottloser T\[E]at bewegt?
+        W\[A]er tr\"{a}gt die Handschrift von dem f\[D]eigen Mord?
+        A\[A]n unser'm Gn\[E]aden auf dem T\[A]urm-Abort \ldots \[E] \[A] \[D] \[E] \[A]
     \endchorus
 
-    \beginverse
-        Nach ^gar nicht langer Weile kam vom ^k\"{o}niglichen Thron
-        ^Bald schon eine Pfaff- und B\"{u}ttel-^Aufkl\"{a}rkommission,
-        ^Welche diese dunkle Tat f\"{u}r ^aller Adelswohl wollt' lichten
-        ^Und getreulich von dem Vor- und ^Ab-Rein^fall ber^ichten.
+    \beginverse\replay[verse]
+        Nach g^ar nicht langer Weile kam vom k^\"{o}niglichen Thron
+        B^ald schon eine Pfaff- und B\"{u}ttel-^Aufkl\"{a}rkommission,
+        W^elche diese dunkle Tat f\"{u}r ^aller Adelswohl wollt' lichten
+        ^Und getreulich von dem Vor- und ^Ab-Reinf^all ber^ichten.
 
-        ^Es kamen viele Fragen auf wie ^die, warum der der Graben gar,
-        Der ^um die Burg flie\ss{}t, stets gef\"{u}llt, an ^diesem Morgen trocken war?
-        Und ^wer was zu den frischen Erdhaufb^ahnen um der Feste wei\ss{},
-        Dies ^sei nur eine Spargelzucht bez^eugte ^ein alt ^Bauerngreis
+        Es k^amen viele Fragen auf wie d^ie, warum der der Graben gar,
+        Der ^um die Burg flie\ss{}t, stets gef\"{u}llt, an d^iesem Morgen trocken war?
+        Und w^er was zu den frischen Erdhaufb^ahnen um der Feste wei\ss{},
+        Dies s^ei nur eine Spargelzucht bez^eugte ^ein alt' ^Bauerngreis
     \endverse
 
-    \beginverse*
-        Das \[D]Wasser ging wohl just zu Dunst nach \[E]Vortags Hitzeplage
-        \[A]Stellte so der Hauptmann fest \[D]umsorgt von einer Frage ...
+    \beginverse*\replay[bridge]
+        Das W^asser ging wohl just zu Dunst nach V^ortags Hitzeplage
+        St^ellte so der Hauptmann fest ums^orgt von einer Frage \ldots
     \endverse
 
-    \beginchorus
-        \[A]Wer hat den Donnerbalken \[E]anges\"{a}gt?
-        \[D]Wen hat's zu solch gottloser \[E]Tat bewegt?
-        \[A]Wer tr\"{a}gt die Handschrift von dem \[D]feigen Mord?
-        \[A]An unser'm \[E]Gnaden auf dem \[A]Turm-Abort ... \[A] \[E] \[A] \[D] \[E] \[A]
+    \beginchorus\replay[chorus]
+        W^er hat den Donnerbalken ^anges\"{a}gt?
+        W^en hat's zu solch gottloser T^at bewegt?
+        W^er tr\"{a}gt die Handschrift von dem f^eigen Mord?
+        ^An unser'm Gn^aden auf dem T^urm-Abort \ldots ^ ^ ^ ^ ^
     \endchorus
 
-    \beginverse
-        So ^suchte man im Volk umher nach ^weit'ren Zeuzgensagen
-        Und ^tat die h\"{o}chsten H\"{a}upter in dem ^Dorfrat denn befragen.
-        Der ^Schulze war gar Augenzeuge ^und sprach nach 'nem lauten Krach,
-        ^Fiel der Graf mit Rittlings-Salto ^und 'nem ^halben ^Auerbach
+    \beginverse\replay[verse]
+        So s^uchte man im Volk umher nach w^eit'ren Zeuzgensagen
+        Und t^at die h\"{o}chsten H\"{a}upter in dem D^orfrat denn befragen.
+        Der Sch^ulze war gar Augenzeuge ^und sprach nach 'nem lauten Krach,
+        F^iel der Graf mit Rittlings-Salto ^und 'nem h^alben ^Auerbach
 
-        \[D]So grazi\"{o}s von seinem Stuhl, auf \[E]dem er sa\ss{} gar nackig drauf,
-        Zum \[A]Boden wo er denn noch schrie - bis \[D]ihm der \[E]Balk fiel \[A]oben auf
-        Und \[A]f\"{u}gte noch hinzu, kein Wunder, \[E]dass der solcher Art verreckt,
-        Der \[A]Graf hat seiner Lebzeit doch nur \[D]stets im \[E]Dung \[A]gesteckt.
+        S\[D]o grazi\"{o}s von seinem Stuhl, auf d\[E]em er sa\ss{} gar nackig drauf,
+        Zum B\[A]oden wo er denn noch schrie (AAaaaaaAAAaaaaaa \ldots \textbf{*bomp!*}) -  bis \[D]ihm der B\[E]alk fiel \[A]oben auf
+        Und f\[A]\"{u}gte noch hinzu, kein Wunder, d\[E]ass der solcher Art verreckt,
+        Der Gr\[A]af hat seiner Lebzeit doch nur st\[D]ets im D\[E]ung gest\[A]eckt.
     \endverse
 
-    \beginverse*
-        Die \[D]Kommission war zwar emp\"{o}rt, was \[E]hier der Schulze wage,
-        Doch \[A]lie\ss{}en sie von Strafe ab, zu \[D]wichtig war die Frage.
+    \beginverse*\replay[bridge]
+        Die K^ommission war zwar emp\"{o}rt, was h^ier der Schulze wage,
+        Doch l^ie\ss{}en sie von Strafe ab, zu w^ichtig war die Frage.
     \endverse
 
-    \beginchorus
-        \[A]Wer hat den Donnerbalken \[E]anges\"{a}gt?
-        \[D]Wen hat's zu solch gottloser \[E]Tat bewegt?
-        \[A]Wer tr\"{a}gt die Handschrift von dem \[D]feigen Mord?
-        \[A]An unser'm \[E]Gnaden auf dem \[A]Turm-Abort ... \[A] \[E] \[A] \[D] \[E] \[A]
+    \beginchorus\replay[chorus]
+        W^er hat den Donnerbalken ^anges\"{a}gt?
+        W^en hat's zu solch gottloser T^at bewegt?
+        W^er tr\"{a}gt die Handschrift von dem f^eigen Mord?
+        ^An unser'm Gn^aden auf dem T^urm-Abort \ldots ^ ^ ^ ^ ^
     \endchorus
 
-    \beginverse
+    \beginverse\replay[verse]
         ^Auch der Wachmann wusst' nicht weiter, ^obgleich er am Tore stand,
         ^Und den werten Herrn vom Hause ^in der misslich Lage fand.
-        Er ^sagte denn, er k\"{o}nnt' an sich die ^ganze Tat auch nicht versteh'n
-        Und ^h\"{a}tte wohl noch nie im Leben ^so'n ^Haufen ^Schei\ss{} geseh'n.
+        Er s^agte denn, er k\"{o}nnt' an sich die g^anze Tat auch nicht versteh'n
+        Und h^\"{a}tte wohl noch nie im Leben s^o 'nen H^aufen Sch^ei\ss{} geseh'n.
 
-        Doch ^dann gab er den Hinweis noch viel^leicht hat's ja den Koch verleitet
+        Doch d^ann gab er den Hinweis noch viell^eicht hat's ja den Koch verleitet
         ^Und er hat an jenem Morgen ^allzu schweres Mahl bereitet.
-        Der ^Koch doch wies emp\"{o}rt zur\"{u}ck, er ^k\"{o}nne nicht der T\"{a}ter sein,
-        Er ^fl\"{o}\ss{}te uns'rem Grafen nur zwei ^Flaschen ^leichten ^Weines ein.
+        Der K^och doch wies emp\"{o}rt zur\"{u}ck, er k^\"{o}nne nicht der T\"{a}ter sein,
+        Er fl^\"{o}\ss{}te uns'rem Grafen nur zwei Fl^aschen l^eichten W^eines ein.
     \endverse
 
-    \beginverse*
-        Die \[D]Kommission fand's m\"{u}\ss{}ig schon und \[E]bracht's zu keiner Klage
-        \[A]Und verzweifelte nur weiter \[D]an der steten Frage:
+    \beginverse*\replay[bridge]
+        Die K^ommission fand's m\"{u}\ss{}ig schon und br^acht's zu keiner Klage
+        ^Und verzweifelte nur weiter \[D]an der steten Frage:
     \endverse
 
-    \beginchorus
-        \[A]Wer hat den Donnerbalken \[E]anges\"{a}gt?
-        \[D]Wen hat's zu solch gottloser \[E]Tat bewegt?
-        \[A]Wer tr\"{a}gt die Handschrift von dem \[D]feigen Mord?
-        \[A]An unser'm \[E]Gnaden auf dem \[A]Turm-Abort ... \[A] \[E] \[A] \[D] \[E] \[A]
+    \beginchorus\replay[chorus]
+        W^er hat den Donnerbalken ^anges\"{a}gt?
+        W^en hat's zu solch gottloser T^at bewegt?
+        W^er tr\"{a}gt die Handschrift von dem f^eigen Mord?
+        ^An unser'm Gn^aden auf dem T^urm-Abort \ldots ^ ^ ^ ^ ^
     \endchorus
 
-    \beginverse
-        Nach ^ein paar Tagen M\"{u}hsal war's den ^B\"{U}tteln dann zu viel
+    \beginverse\replay[verse]
+        Nach ^ein paar Tagen M\"{u}hsal war's den B^\"{u}tteln dann zu viel
         Und ^auch die Pfaffen hatten schon 'nen ^and'ren Fall zum Ziel.
-        Das ^mag zwar wunderlich erschei'n, doch ^nur so lang wie ihr nicht wisst,
-        Dass ^nun das Haupt der Komission uns ^neu ern^anntes ^Gr\"{a}flein ist.
+        Das m^ag zwar wunderlich erschei'n, doch n^ur so lang wie ihr nicht wisst,
+        Dass n^un das Haupt der Komission uns n^eu ern^anntes Gr^\"{a}flein ist.
 
-        Nach^dem er denn den Abort legte ^auf 'ne and're Turmesseite
+        Nachd^em er denn den Abort legte ^auf 'ne and're Turmesseite
         ^Und uns von der Steuerlast zum^indest einen Teil befreite
-        ^Hernach feierte das Volk drei ^Tage lang voll Gl\"{u}ck und Wissen,
-        ^dass ein jeder aus dem Dorf am ^Mordtag ^noch vom ^Turm geschissen.
+        H^ernach feierte das Volk drei T^age lang voll Gl\"{u}ck und Wissen,
+        d^ass ein jeder aus dem Dorf am M^ordtag n^och vom T^urm geschissen.
     \endverse
 
-    \beginverse*
-        \[D]Und durch's ganze Dorf erklang nicht \[E]eine Trauerklage,
-        Doch \[A]Jubelrufe auf die Antwort \[D]der gewissen Frage.
+    \beginverse*\replay[bridge]
+        ^Und durch's ganze Dorf erklang nicht ^eine Trauerklage,
+        Doch J^ubelrufe auf die Antwort d^er gewissen Frage.
     \endverse
 
-    \beginchorus
-        \[A]Ich hab den Donnerbalken \[E]anges\"{a}gt,
-        \[D]Mich hat's zu solch gottloser \[E]Tat bewegt,
-        \[A]Mein ist die Handschrift von dem \[D]feigen Mord
-        \[A]An unser'm \[E]Gnaden auf dem \[A]Turm-Abort
+    \beginchorus\replay[chorus]
+        W^er hat den Donnerbalken ^anges\"{a}gt?
+        W^en hat's zu solch gottloser T^at bewegt?
+        W^er tr\"{a}gt die Handschrift von dem f^eigen Mord?
+        ^An unser'm Gn^aden auf dem T^urm-Abort \ldots ^ ^ ^ ^ ^
+    \endchorus
 
-        \[A]Wir ham' den Donnerbalken anges\"{a}gt,
-        \[D]Uns hat's zu solch gottloser \[E]Tat bewegt,
-        \[A]Uns're ist die Handschrift von dem \[D]feigen Mord,
-        \[A]An unser'm Gnaden auf dem \[A]Turm-Abort.
+    \beginchorus\replay[chorus]
+        ^Ich hab' den Donnerbalken ^anges\"{a}gt,
+        M^ich hat's zu solch gottloser T^at bewegt,
+        M^ein ist die Handschrift von dem f^eigen Mord
+        ^An unser'm Gn^aden auf dem T^urm-Abort
+        \replay[chorus]
+        \brk
+        W^ir ham' den Donnerbalken ^anges\"{a}gt,
+        ^Uns hat's zu solch gottloser T^at bewegt,
+        ^Uns're ist die Handschrift von dem f^eigen Mord,
+        ^An unser'm Gn^aden auf dem T^urm-Abort.
     \endchorus
 \endsong
