--- a/src/thebonnyshipthediamond.tex
+++ b/src/thebonnyshipthediamond.tex
@@ -15,47 +15,47 @@
         \gtab{Em7}{020000:020000}
     \end{center}
 
-    \beginverse
-        The \[Am]Diamond is a \[Em]ship me lads, for the \[Am]David Straits she's \[Em]bound
-        \[Am]And the quay it is all \[Em]garnished with \[Am]bonny \[Em7]lassies \[Am]round.
-        Captain \[Am]Thompson gives the \[Em]order to \[Am]sail the ocean \[Em]wide
-        Where the \[Am]sun it never \[Em]sets me lads, nor \[Am]darkness \[Em7]dims the \[Am]
+    \beginverse\memorize[verse]
+        The D\[Am]iamond is a sh\[Em]ip me lads, for the D\[Am]avid Straits she's b\[Em]ound
+        And the q\[Am]uay it is all g\[Em]arnished with b\[Am]onny l\[Em7]assies 'r\[Am]ound.
+        Captain Th\[Am]ompson gives the \[Em]order to s\[Am]ail the ocean w\[Em]ide
+        Where the s\[Am]un it never s\[Em]ets me lads, nor d\[Am]arkness d\[Em7]ims the sk\[Am]y
     \endverse
 
-    \beginchorus
+    \beginchorus\memorize[chorus]
         So it's cheer up me lads, let your hearts never fail.
         For the bonny ship the Diamond goes a fishing for the whale
     \endchorus
 
-    \beginverse
-        A^long the quay at ^Peterhead the ^lassies stand a^round
-        With their ^shawls pulled all a^bout them and the ^salt ^tears running ^down.
-        ^Don't you weep me ^bonny lassie, though ^you'll be left be^hind
-        For the ^rose that grows on ^Greenland's ice be^fore I ^changed my ^mind.
+    \beginverse\replay[verse]
+        Al^ong the quay at P^eterhead the l^assies stand ar^ound
+        With their sh^awls pulled all ab^out them and the s^alt te^ars running d^own.
+        D^on't you weep me b^onny lassie, though y^ou'll be left beh^ind
+        For the r^ose that grows on Gr^eenland's ice bef^ore I ch^anged my m^ind.
     \endverse
 
-    \beginchorus
+    \beginchorus\replay[chorus]
         So it's cheer up me lads, let your hearts never fail.
         For the bonny ship the Diamond goes a fishing for the whale
     \endchorus
 
-    \beginverse
-        Here's ^health to the Reso^lution, like^wise the Eliza ^Swan.
-        Here's ^health to the Battler of ^Montrose and the ^Diamond ^ship of ^fame.
-        We ^wear the trousers ^of the white and the ^jackets of the ^blue
-        When ^we return to ^Peterhead we'll ^hae sweet^hearts en^ou'.
+    \beginverse\replay[verse]
+        Here's h^ealth to the Resol^ution, likew^ise the Eliza S^wan.
+        Here's h^ealth to the Battler of M^ontrose and the D^iamond sh^ip of f^ame.
+        We w^ear the trousers ^of the white and the j^ackets of the bl^ue
+        When w^e return to P^eterhead we'll h^ae sweeth^earts en^ou'.
     \endverse
 
-    \beginchorus
+    \beginchorus\replay[chorus]
         So it's cheer up me lads, let your hearts never fail.
         For the bonny ship the Diamond goes a fishing for the whale
     \endchorus
 
-    \beginverse
-        ^It'll be bright both ^day and night when the ^Greenland lads come ^hame
-        With a ^ship that's full of ^oil me lads and ^money ^to our ^name.
-        We'll ^make the cradles ^for to rock and the ^blankets for to ^tear
-        And ^ev'ry lass in ^Peterhead sing ^Hush a ^bye me ^dear
+    \beginverse\replay[verse]
+        ^It'll be bright both d^ay and night when the Gr^eenland lads come h^ame
+        With a sh^ip that's full of ^oil me lads and m^oney t^o our n^ame.
+        We'll m^ake the cradles f^or to rock and the bl^ankets for to t^ear
+        And ^ev'ry lass in P^eterhead sing H^ush a b^ye me d^ear
     \endverse
 
     \beginchorus
