--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -79,32 +79,32 @@
             \input{../src/dasbierichinderrechtentrug}       \sclearpage
             \input{../src/derwandersmann}                   \sclearpage
             %\input{../src/dunklestunde}                     \sclearpage
-            \input{../src/faroverthemistymountainscold}     \sclearpage
+            %\input{../src/faroverthemistymountainscold}     \sclearpage
             \input{../src/geisterschiff}                    \sclearpage
             %\input{../src/grausinddieschwingen}             \sclearpage
             \input{../src/i_see_fire}                       \sclearpage
-            \input{../src/ichundeinfassvollerwein}          \sclearpage
-            \input{../src/icourtedaweegirl}                 \sclearpage
+            %\input{../src/ichundeinfassvollerwein}          \sclearpage
+            %\input{../src/icourtedaweegirl}                 \sclearpage
             %\input{../src/ihrsonah}                         \sclearpage
-            \input{../src/kleidausrosen}                    \sclearpage
+            %\input{../src/kleidausrosen}                    \sclearpage
             %\input{../src/lordoftherings}                   \sclearpage
             %\input{../src/makingupthemiles}                 \sclearpage
             \input{../src/mordaufdemabort}                  \sclearpage
             %\input{../src/nebelueberdenauen}                \sclearpage
             %\input{../src/ohadelsmann}                      \sclearpage
             %\input{../src/prinzessin}                       \sclearpage
-            \input{../src/senzenina}                        \sclearpage
+            %\input{../src/senzenina}                        \sclearpage
             %\input{../src/stepitoutmary}                    \sclearpage
             %\input{../src/tanzmitmir}                       \sclearpage
-            \input{../src/thebardssong}                     \sclearpage
+            %\input{../src/thebardssong}                     \sclearpage
             \input{../src/thebonnyshipthediamond}           \sclearpage
             \input{../src/thedragonborncomes}               \sclearpage
             \input{../src/therattlinbog}                    \sclearpage
-            \input{../src/thewildrover}                     \sclearpage
+            \input{../src/thewildrover}                     %\sclearpage
             %\input{../src/trunckenbolde}                    \sclearpage
-            \input{../src/willstdu}                         \sclearpage
+            %\input{../src/willstdu}                         \sclearpage
             %\input{../src/woutmitdenwoelfen}                \sclearpage
-            \input{../src/yejackobites}
+            %\input{../src/yejackobites}
         \end{songs}
 
     \clearpage
@@ -115,31 +115,31 @@
             %\input{../src/dragonball}                       \sclearpage
             %\input{../src/buenastardesamigo}                \sclearpage
             \input{../src/deathtothedrow}                   \sclearpage
-            \input{../src/eineleicheimteich}                \sclearpage
-            \input{../src/ethikderfuesse}                   \sclearpage
+            %\input{../src/eineleicheimteich}                \sclearpage
+            %\input{../src/ethikderfuesse}                   \sclearpage
             \input{../src/fassbierpaladosen}                \sclearpage
-            \input{../src/hesapirate}                       \sclearpage
-            \input{../src/kaperfahrt}                       \sclearpage
+            %\input{../src/hesapirate}                       \sclearpage
+            %\input{../src/kaperfahrt}                       \sclearpage
             %\input{../src/kickapoo}                         \sclearpage
             \input{../src/pippilangstrumpf}                 \sclearpage
             %\input{../src/stillenacht-larp}                 \sclearpage
-            \input{../src/trigardon}                        %\sclearpage
-            \input{../src/theenchanter}                     \sclearpage
+            %\input{../src/trigardon}                        \sclearpage
+            \input{../src/theenchanter}                     %\sclearpage
             %\input{../src/untotaufurlaub}
         \end{songs}{}
 
-    \clearpage
-    \songsection{Modern / Rock / Blues}{}
-        \begin{songs}{}
-            %\input{../src/everythingburns}                  \sclearpage
-            %\input{../src/littletalks}                      \sclearpage
-            \input{../src/mountainclimbing}                 \sclearpage
-            %\input{../src/rollinginthedeep}                 \sclearpage
-            %\input{../src/sevennationarmy}                  \sclearpage
-            %\input{../src/soundofsilence}                   \sclearpage
-            \input{../src/summerwine}                       \sclearpage
-            %\input{../src/timshel}
-        \end{songs}
+    %\clearpage
+    %\songsection{Modern / Rock / Blues}{}
+    %    \begin{songs}{}
+    %        %\input{../src/everythingburns}                  \sclearpage
+    %        %\input{../src/littletalks}                      \sclearpage
+    %        \input{../src/mountainclimbing}                 \sclearpage
+    %        %\input{../src/rollinginthedeep}                 \sclearpage
+    %        %\input{../src/sevennationarmy}                  \sclearpage
+    %        %\input{../src/soundofsilence}                   \sclearpage
+    %        \input{../src/summerwine}                       \sclearpage
+    %        %\input{../src/timshel}
+    %    \end{songs}
 
     \clearpage
     \songsection{Oldies}
@@ -149,17 +149,17 @@
             %\input{../src/blackbird}                        \sclearpage
             %\input{../src/blowinginthewind}                 \sclearpage
             %\input{../src/dimming_of_the_day}               \sclearpage
-            \input{../src/fragile}                          \sclearpage
-            \input{../src/godsgonnacutyoudown}              \sclearpage
+            %\input{../src/fragile}                          \sclearpage
+            %\input{../src/godsgonnacutyoudown}              \sclearpage
             \input{../src/havent_we_lost_enough}            \sclearpage
-            \input{../src/hallelujah}                       \sclearpage
+            %\input{../src/hallelujah}                       \sclearpage
             %\input{../src/helplesslyhoping}                 \sclearpage
-            \input{../src/constantsorrow}                   \sclearpage
+            %\input{../src/constantsorrow}                   \sclearpage
             %\input{../src/itdoesntmatter}                   \sclearpage
-            \input{../src/layla.tex}                        \sclearpage
-            \input{../src/lives_in_the_balance}             \sclearpage
+            %\input{../src/layla.tex}                        \sclearpage
+            %\input{../src/lives_in_the_balance}             \sclearpage
             %\input{../src/moonshadow}                       \sclearpage
-            \input{../src/rainbowinthedark}                 \sclearpage
+            %\input{../src/rainbowinthedark}                 \sclearpage
             %\input{../src/sailingtophiladelphia}            \sclearpage
             \input{../src/teach_your_children}              \sclearpage
             \input{../src/thegreenfieldsoffrance}           %\sclearpage
