--- a/src/teach_your_children.tex
+++ b/src/teach_your_children.tex
@@ -17,45 +17,53 @@
     \gtab{A7no3}{5:XX101X:002030}
     \gtab{Bm}{244322:134211}
 
-    \beginverse
-        \[D]You who are on the r\[G]oad
-        Must have a \[D]code That you can \[A]live \[A7]by \[Asus4] \[A7no3]
-        And \[D]so become your\[G]self because the \[D]past
-        Is just a \[A]good-\[A7]bye \[Asus4] \[A7no3]
+    \beginverse\memorize[verse]
+        Y\[D]ou who are on the r\[G]oad
+        Must have a c\[D]ode That you can l\[A]ive b\[A7]y \[Asus4] \[A7no3]
+        And s\[D]o become yours\[G]elf because the p\[D]ast
+        Is just a g\[A]ood-by\[A7]e \[Asus4] \[A7no3]
     \endverse
 
-    \beginverse*
-        ^Teach your children ^well
-        Their father's ^hell did slowly ^go ^by ^ ^
-        And ^feed them on your ^dreams the one they ^picked,
-        The one you'll ^know ^by ^ ^
+    \beginverse*\replay[verse]
+        T^each your children w^ell
+        Their father's h^ell did slowly g^o b^y ^ ^
+        And f^eed them on your dr^eams the one they p^icked,
+        The one you'll kn^ow b^y ^ ^
     \endverse
 
-    \beginchorus
-        \[D] Don't you ever ask them \[G]why,
-        If they told you, you would \[D]cry,
-        So just look at them and \[Bm]sigh \[G]- \[A]-
-        And know they \[D]love you. \[G] \[D] \[A] \[A7] \[Asus4] \[A7no3]
+    \beginchorus\memorize[chorus]
+        \[D] Don't you ever ask them wh\[G]y,
+        If they told you, you would cr\[D]y,
+        So just look at them and s\[Bm]igh \[G]- \[A]-
+        And know they l\[D]ove you. \[G] \[D] \[A] \[A7] \[Asus4] \[A7no3]
     \endchorus
 
-    \beginverse
-        And ^you, of tender ^years
-        Can't know the ^fears that your elders ^grew ^by ^ ^
-        And ^so please help them with your ^youth
-        The seek the ^truth before they ^can ^die ^ ^
+    \beginverse\replay[verse]
+        And y^ou, of tender y^ears
+        Can't know the f^ears that your elders gr^ew b^y ^ ^
+        And s^o please help them with your y^outh
+        The seek the tr^uth before they c^an d^ie ^ ^
     \endverse
 
-    \beginverse*
-        ^Teach your parents ^well
-        Their childrens ^hell did slowly ^go ^by ^ ^
-        And ^feed them on your ^dreams the one they ^picked
-        The one you'll ^know ^by ^ ^
+    \beginverse*\replay[verse]
+        T^each your parents w^ell
+        Their childrens h^ell did slowly g^o b^y ^ ^
+        And f^eed them on your dr^eams the one they p^icked
+        The one you'll k^now b^y ^ ^
     \endverse
 
-    \beginchorus
-        \[D] Don't you ever ask them \[G]why,
-        If they told you, you would \[D]cry,
-        So just look at them and \[Bm]sigh \[G]- \[A]-
-        And know they \[D]love you. \[G] \[D] \[A] \[A7] \[Asus4] \[A7no3]
+    \beginchorus\replay[chorus]
+        ^ Don't you ever ask them w^hy,
+        If they told you, you would cr^y,
+        So just look at them and s^igh ^- ^-
+        And know they l^ove you. ^
+    \endchorus
+
+
+    \beginchorus\replay[chorus]
+        ^ Don't you ever ask them w^hy,
+        If they told you, you would cr^y,
+        So just look at them and s^igh ^- ^-
+        And know they l^ove you. ^ ^ ^ \[G] \[D] \[A] \[D]
     \endchorus
 \endsong
