[ pippi langstrumpf medley ] chord placement

--- a/src/pippilangstrumpf.tex
+++ b/src/pippilangstrumpf.tex
@@ -20,90 +20,90 @@
     \end{center}
 
     \beginverse\memorize[verse]
-        \[C]Zwei mal drei macht \[Dm]vier wide-wide-\[G]witt und drei macht \[C]neune,
-        \[C]Ich mach' mir die \[Dm]Welt wide-wide-\[G]wie sie mir ge\[C]f\"{a}llt.
+        Zw\[C]ei mal drei macht v\[Dm]ier widde-widde-w\[G]itt und drei macht n\[C]eune,
+        \[C]Ich mach' mir die W\[Dm]elt wide-wide-w\[G]ie sie mir gef\[C]\"{a}llt.
         R\[C]eit' ich im Gal\[Dm]opp holla-holla-h\[G]opsa durch die Str\[C]a\ss{}en,
-        St\[C]eh'n in langen \[Dm]Reih'n alle meine \[G]Freunde da und \[C]schrei'n:
+        St\[C]eh'n in langen R\[Dm]eih'n alle meine Fr\[G]eunde da und schr\[C]ei'n:
     \endverse
 
     \beginchorus\memorize[chorus]
-        \lrep \[C]Hey Pippi \[F]Langstrumpf, trallal\[G]i trallala tralla hoppsassa.
-        \[C]Hey Pippi \[F]Langstrumpf, die \[G]macht was ihr gef\[C]\"{a}llt.\rrep \rep{2}
+        \lrep H\[C]ey Pippi L\[F]angstrumpf, trallal\[G]i trallala tralla hoppsassa.
+        H\[C]ey Pippi L\[F]angstrumpf, die m\[G]acht was ihr gef\[C]\"{a}llt.\rrep \rep{2}
     \endchorus
 
     \beginverse\replay[verse]
-        ^Drei mal drei macht ^sechs, wide-wide-^wer will's von mir l^ernen?
-        ^Alle gro\ss{} und ^klein tralla-lalla-l^ad ich zu mir ^ein.
+        Dr^ei mal drei macht s^echs, widde-widde-w^er will's von mir l^ernen?
+        ^Alle gro\ss{} und kl^ein trala-lala-l^ad ich zu mir ^ein.
     \endverse
 
     \beginverse*\memorize[bridge]
-        Ich hab' ein \[F]Haus, ein \[G]kunterbuntes \[C]Haus,
-        Ein \[Am]\"{A}ffchen und ein \[F]Pferd, die \[G]schauen dort zum \[C]Fenster raus.
-        Ich hab' ein \[F]Haus, ein \[G]\"{A}ffchen und ein \[C]Pferd
-        Und \[Am]jeder der uns \[F]fragt, kriegt' \[G]unser Ein-Mal-\[F]Eins \[G]ge\[C]lehrt.
+        Ich hab' ein H\[F]aus, ein k\[G]unterbuntes H\[C]aus,
+        Ein \[Am]\"{A}ffchen und ein Pf\[F]erd, die sch\[G]auen dort zum F\[C]enster raus.
+        Ich hab' ein H\[F]aus, ein \[G]\"{A}ffchen und ein Pf\[C]erd
+        Und j\[Am]eder der uns fr\[F]agt, kriegt' \[G]unser Ein-Mal-\[F]Eins g\[G]el\[C]ehrt.
     \endverse
 
     \beginverse\replay[verse]
-        ^Zwei mal drei macht ^vier wide-wide-^witt und drei macht ^neune,
-        ^Ich mach' mir die ^Welt wide-wide-^wie sie mir gef^\"{a}llt.
-        Dr^ei mal drei macht ^sechs wide-wide-^wer will's von mir l^ernen?
-        ^Alle gro\ss{} und ^klein tralla-lalla-l^ad ich zu mir ^ein.
+        Zw^ei mal drei macht v^ier widde-widde-w^itt und drei macht n^eune,
+        ^Ich mach' mir die W^elt wide-wide-w^ie sie mir gef^\"{a}llt.
+        Dr^ei mal drei macht s^echs wide-wide-w^er will's von mir l^ernen?
+        ^Alle gro\ss{} und kl^ein trala-lala-l^ad ich zu mir ^ein.
     \endverse
 
     \beginchorus\replay[chorus]
-        \lrep ^Hey Pippi ^Langstrumpf trallal^i tallala tralla hoppsassa.
-        ^Hey Pippi ^Langstrumpf die m^acht was ihr gef^\"{a}llt. \rrep \rep{2}
+        \lrep H^ey Pippi L^angstrumpf trala-l^i trala-la trala hoppsassa.
+        H^ey Pippi L^angstrumpf die m^acht was ihr gef^\"{a}llt. \rrep \rep{2}
     \endchorus
 
     \textnote{Achtung! Text! Tempo leicht anziehen!}
 
     \beginverse\replay[verse]
-        Es ^gibt nur einen ^Gott wide-wide-w^itt und der hat H^\"{o}rner.
-        H^at er keine ^drann, ja dann z^\"{u}nden wir ihn ^an.
+        Es g^ibt nur einen G^ott widde-widde-w^itt und der hat H^\"{o}rner.
+        H^at er keine dr^ann, ja dann z^\"{u}nden wir ihn ^an.
     \endverse
 
     \beginchorus\replay[chorus]
-        \lrep ^Hey wir sind H^eiden trallal^i tallala tralla hoppsassa.
-        ^Hey wir sind H^eiden, wir t^un was uns gef^\"{a}llt. \rrep \rep{2}
+        \lrep H^ey wir sind H^eiden trala-l^i trala-la trala hoppsassa.
+        H^ey wir sind H^eiden, wir t^un was uns gef^\"{a}llt. \rrep \rep{2}
     \endchorus
 
     \beginverse\replay[verse]
-        O^din hei\ss{}t unser ^Gott, wide-wide-w^itt der hat zwei R^aben.
+        Od^in hei\ss{}t unser G^ott, widde-widde-w^itt der hat zwei R^aben.
         J^esus der war ^anders, umg^eben von zw\"{o}lf Kn^aben
     \endverse
 
     \beginchorus\replay[chorus]
-        \lrep ^Hey wir sind H^eiden trallal^i tallala tralla hoppsassa.
-        ^Hey wir sind H^eiden, wir t^un was uns gef^\"{a}llt. \rrep \rep{2}
+        \lrep H^ey wir sind H^eiden trala-l^i trala-la trala hoppsassa.
+        H^ey wir sind H^eiden, wir t^un was uns gef^\"{a}llt. \rrep \rep{2}
     \endchorus
 
     \beginverse\replay[verse]
-        K^ommt ein Christ da^her, wide-wide-w^itt dann kriegt er H^aue.
+        K^ommt ein Christ dah^er, widde-widde-w^itt dann kriegt er H^aue.
         K^ommt er noch mal ^an, ja dann ^ist er wirklich dr^an.
     \endverse
 
     \beginchorus\replay[chorus]
-        \lrep ^Hey wir sind H^eiden trallal^i tallala tralla hoppsassa.
-        ^Hey wir sind H^eiden, wir t^un was uns gef^\"{a}llt. \rrep \rep{2}
+        \lrep H^ey wir sind H^eiden trala-l^i trala-la trala hoppsassa.
+        H^ey wir sind H^eiden, wir t^un was uns gef^\"{a}llt. \rrep \rep{2}
     \endchorus
 
     \beginverse\replay[verse]
-        Und k^ommt ein Weib dah^er wide-wide-w^itt oder auch zw^eie,
+        Und k^ommt ein Weib dah^er widde-widde-w^itt oder auch zw^eie,
         N^ehmen wir sie m^it, auch wenn ^eine davon tr^itt.
     \endverse
 
     \beginchorus\replay[chorus]
-        \lrep ^Hey wir sind H^eiden trallal^i tallala tralla hoppsassa.
-        ^Hey wir sind H^eiden, wir t^un was uns gef^\"{a}llt. \rrep \rep{2}
+        \lrep H^ey wir sind H^eiden trala-l^i trala-la trala hoppsassa.
+        H^ey wir sind H^eiden, wir t^un was uns gef^\"{a}llt. \rrep \rep{2}
     \endchorus
 
     \beginverse\replay[verse]
         Der D^eutschritter ist gr^o\ss{}, mein Pf^eil der wird ihn tr^effen.
-        Trifft ^ihn nicht mein Pf^eil, ja dann sp^\"{u}rt er halt mein B^eil.
+        Und tr^ifft ihn nicht mein Pf^eil, ja dann sp^\"{u}rt er halt mein B^eil.
     \endverse
 
     \beginchorus\replay[chorus]
-        \lrep ^Hey wir sind H^eiden trallal^i tallala tralla hoppsassa.
-        ^Hey wir sind H^eiden, wir t^un was uns gef^\"{a}llt. \rrep \rep{2}
+        \lrep H^ey wir sind H^eiden trala-l^i trala-la trala hoppsassa.
+        H^ey wir sind H^eiden, wir t^un was uns gef^\"{a}llt. \rrep \rep{2}
     \endchorus
 \endsong
