[ the enchanter ] chord placement
issue #28

--- a/src/theenchanter.tex
+++ b/src/theenchanter.tex
@@ -15,53 +15,53 @@
         \gtab{D7}{XX0212:000312}
     \end{center}
 
-    \beginverse
-        I've \[G]been an enchanter for many a \[C]year
-        And I've \[G]sent all my \[C]money on \[D7]small boys and \[G]beer.
-        But \[G]now I'm returning with spells in great \[C]store,
-        And I \[G]never will \[C]play the ap\[D7]prentice, no \[G]more.
+    \beginverse\memorize[verse]
+        I've b\[G]een an enchanter for many a y\[C]ear
+        And I've s\[G]ent all my m\[C]oney on s\[D7]mall boys and b\[G]eer.
+        But n\[G]ow I'm returning with spells in great st\[C]ore,
+        And I n\[G]ever will pl\[C]ay the appr\[D7]entice, no m\[G]ore.
     \endverse
 
-    \beginchorus
-        And it's \[D]no, nay, never, \[G] no, nay, never no \[C]more
-        Will I \[G]play the ap\[C]prentice, no \[D7]never, no \[G]more.
+    \beginchorus\memorize[chorus]
+        And it's n\[D]o, nay, never, \[G] no, nay, never no m\[C]ore
+        Will I pl\[G]ay the appr\[C]entice, no n\[D7]ever, no m\[G]ore.
     \endchorus
 
-    \beginverse
-        Well I ^went to a guild house I used to fre^quent,
-        And I ^told the guild^master my ^wand it was ^bend,
-        I ^asked him to fix it, he answered me ^yes,
-        And ^just where he ^rammed it, I'll ^leave you to ^guess.
+    \beginverse\replay[verse]
+        Well I w^ent to a guild house I used to frequ^ent,
+        And I t^old the guildm^aster my w^and it was b^end,
+        I ^asked him to fix it, he answered me y^es,
+        And j^ust where he r^ammed it, I'll l^eave you to gu^ess.
     \endverse
 
-    \beginchorus
-        And it's \[D]no, nay, never, \[G] no, nay, never no \[C]more
-        Will I \[G]play the ap\[C]prentice, no \[D7]never, no \[G]more.
+    \beginchorus\replay[chorus]
+        And it's n^o, nay, never, ^ no, nay, never no m^ore
+        Will I pl^ay the appr^entice, no n^ever, no m^ore.
     \endchorus
 
-    \beginverse
-        I ^went down to norham a-selling my ^wares,
-        But ^looking a^round I ^noticed their ^stares.
-        I ^wondered whats with them, but realy who ^cares?
-        But I was ^so out of ^fashion I was ^still wearing ^flares.
+    \beginverse\replay[verse]
+        I w^ent down to norham a-selling my w^ares,
+        But l^ooking ar^ound I n^oticed their st^ares.
+        I w^ondered what's with them, but realy who c^ares?
+        But I was s^o out of f^ashion I was st^ill wearing fl^ares.
     \endverse
 
-    \beginchorus
-        And it's \[D]no, nay, never, \[G] no, nay, never no \[C]more
-        Will I \[G]play the ap\[C]prentice, no \[D7]never, no \[G]more.
+    \beginchorus\replay[chorus]
+        And it's n^o, nay, never, ^ no, nay, never no m^ore
+        Will I pl^ay the appr^entice, no n^ever, no m^ore.
     \endchorus
 
-    \beginverse
-        My ^story is over, all told it is ^true,
-        But ^one word for ^wisdom I'll ^leave with ^you.
-        If ^you get apprenticed to magic say ^``nay'',
-        But ^please don't off^end, or they'll ^blow you a^way.
+    \beginverse\replay[verse]
+        My st^ory is over, all told it is tr^ue,
+        But ^one word for w^isdom I'll l^eave with y^ou.
+        If y^ou get apprenticed to magic say ``n^ay'',
+        But pl^ease don't off^end, or they'll bl^ow you aw^ay.
     \endverse
 
-    \beginchorus
-        \lrep And it's \[D]no, nay, never, \[G] no, nay, never no \[C]more
-        Will I \[G]play the ap\[C]prentice, no \[D7]never, no \[G]more. \rrep \rep{2}
+    \beginchorus\replay[chorus]
+        \lrep And it's n^o, nay, never, ^ no, nay, never no m^ore
+        Will I pl^ay the appr^entice, no n^ever, no m^ore. \rrep \rep{2}
 
-        \textnote{1\textsuperscript{st} time a.c.}
+        \textnote{1\textsuperscript{st} time kind of a.c.}
     \endchorus
 \endsong
