[ fassbier und paladosen ] + new package
issue #23 + new package for smileys :-)

--- a/TeX/Chordbook/chordbook.cls
+++ b/TeX/Chordbook/chordbook.cls
@@ -6,6 +6,9 @@
 \title{Chordbook}
 \author{``\myauthor''}
 
+% For smileys
+\RequirePackage{MnSymbol,wasysym}
+
 \RequirePackage{xcolor}
 \definecolor{linkcolor}{HTML}{0055AA}
 \definecolor{citecolor}{HTML}{33BB00}
