--- a/src/fassbierpaladosen.tex
+++ b/src/fassbierpaladosen.tex
@@ -19,61 +19,61 @@
         \gtab{E7}{020100:020100}
     \end{center}
 
-    \beginverse
-        \[E]Ich besuchte eine Menschenstadt,
-        Ich wollte \[A]gucken, was die einem Zwerg zu bieten hat.
-        Ein \[D]Priester sagte, ich solle in die Ferne zieh'n,
-        Er gab mir \[A]Schnaps, Bier und ich war \[E] Paladin.
+    \beginverse\memorize[verse]
+        \[E] Ich besuchte eine Menschenstadt,
+        Ich wollte g\[A]ucken, was die einem Zwerg zu bieten hat.
+        Ein Pr\[D]iester sagte, ich solle in die Ferne zieh'n,
+        Er gab mir Schn\[A]aps, Bier und ich war \[E] Paladin.
 
-        Gut ge\[E]r\"{u}stet zog ich in die Welt hinaus,
-        Auf dem \[A]R\"{u}cken mein Fass Bier und das war's dann auch.
-        Ich \[D]lernte schnell, nur wahre Freundschaft z\"{a}hlt
-        Und \[F]habe eine Bund f\"{u}r's \[G]Leben gew\"{a}hlt \echo{One, Two}
+        Gut ger\[E]\"{u}stet zog ich in die Welt hinaus,
+        Auf dem R\[A]\"{u}cken mein Fass Bier und das war's dann auch.
+        Ich l\[D]ernte schnell, nur wahre Freundschaft z\"{a}hlt
+        Und h\[F]abe eine Bund f\"{u}r's L\[G]eben gew\"{a}hlt \echo{One, Two}
     \endverse
 
-    \beginchorus
-        \[E]Fassbier und \[D]Paladosen,
-        \[A]Gold'ne R\"{u}stung mit \[C]rosa Rosen.
-        \[E]Heiliger Hammer, \[D]gl\"{a}nzendes Schild,
-        Viel \[A]Alkohol und von \[A7]Mama ein \[E]Bild!
-        \textnote{A7 wie AC/DC ... ;-)}
+    \beginchorus\memorize[chorus]
+        F\[E]assbier und P\[D]aladosen,
+        G\[A]old'ne R\"{u}stung mit r\[C]osa Rosen.
+        H\[E]eiliger Hammer, sch\[D]\"{u}tzendes Schild,
+        Viel \[A]Alkohol und von M\[A7]ama ein B\[E]ild!
+        \textnote{A7 wie AC/DC {\Large \smiley{}}}
     \endchorus
 
-    \beginverse
+    \beginverse\replay[verse]
         ^Edle Gesinnung und Promille im Blut,
-        Ein ^kurzer Kampf und der Schurke ist tot.
+        Ein k^urzer Kampf und der Schurke ist tot.
         ^ Wir sind m\"{a}chtige Krieger,
-        \"{u}ber ^solche wie uns singt man ^Lieder.
+        \"{u}ber s^olche wie uns singt man L^ieder.
 
         ^ Wir sind oft betrunken
         ^ Und wir haben keinen Heiligenschein,
-        Wir ^woll'n doch nur das Licht der Erde sein,
-        ^Klappt das nicht - Bubble, Ruhestein! ^
+        ^ Wir woll'n doch nur das Licht der Erde sein,
+        ^Klappt das nicht - Bubble, ^ Ruhestein!
     \endverse
 
-    \beginchorus
-        \[E]Fassbier und \[D]Paladosen,
-        \[A]Gold'ne R\"{u}stung mit \[C]rosa Rosen.
-        \[E]Heiliger Hammer, \[D]gl\"{a}nzendes Schild,
-        Viel \[A]Alkohol und von \[A7]Mama ein \[E]Bild!
+    \beginchorus\replay[chorus]
+        F^assbier und P^aladosen,
+        G^old'ne R\"{u}stung mit r^osa Rosen.
+        H^eiliger Hammer, sch^\"{u}tzendes Schild,
+        Viel ^Alkohol und von M^ama ein B^ild!
     \endchorus
 
-    \beginverse
+    \beginverse\replay[verse]
         ^Einer von uns war sogar ein Prinz,
-        Er ^war ein m\"{a}chtiger Mann.
-        ^Doch er vertrug keinen Alkohol,
-        Weil ein ^Mensch sowas einfach nicht ^kann.
+        Er w^ar ein m\"{a}chtiger Mann.
+        D^och er vertrug keinen Alkohol,
+        Weil ein M^ensch sowas einfach nicht k^ann.
 
-        Das ^machte ihn sauer und bekloppt,
-        ^Das war wirklich bitter.
-        Drei ^Jahre sp\"{a}ter haben wir ihn verhau'n,
+        Das m^achte ihn sauer und bekloppt,
+        D^as war wirklich bitter.
+        Drei J^ahre sp\"{a}ter haben wir ihn verhau'n,
         Da \[A]war er Todes\[E]ritter; da \[A]war er Todes\[E7]ritter.
     \endverse
 
-    \beginchorus
-        \[E]Fassbier und \[D]Paladosen,
-        \[A]Gold'ne R\"{u}stung mit \[C]rosa Rosen.
-        \[E]Heiliger Hammer, \[D]gl\"{a}nzendes Schild,
-        Viel \[A]Alkohol und von \[A7]Mama ein \[E]Bild!
+    \beginchorus\replay[chorus]
+        F^assbier und P^aladosen,
+        G^old'ne R\"{u}stung mit r^osa Rosen.
+        H^eiliger Hammer, sch^\"{u}tzendes Schild,
+        Viel ^Alkohol und von M^ama ein B^ild!
     \endchorus
 \endsong
