[ new song ] seehilfe - mr hurley
issue #81

--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -122,6 +122,7 @@
             %\input{../src/kaperfahrt}                       \sclearpage
             %\input{../src/kickapoo}                         \sclearpage
             \input{../src/pippilangstrumpf}                 \sclearpage
+            %\input{../src/seehilfe}                         \sclearpage
             %\input{../src/stillenacht-larp}                 \sclearpage
             %\input{../src/trigardon}                        \sclearpage
             \input{../src/theenchanter}                     %\sclearpage
